Wholesale update to newly generated deps (app +mongodb +auth +swagger +re-frame +aleph) + renaming to sand-compass.