@@ -1,61 +1,60 @@
-(defproject reschedul2 "0.1.0-SNAPSHOT"
+(defproject sand-compass "0.1.0-SNAPSHOT"
 
   :description "FIXME: write description"
   :url "http://example.com/FIXME"
 
-  :dependencies [[bouncer "1.0.0"]
-                 [ch.qos.logback/logback-classic "1.1.7"]
-                ;  [clj-oauth "1.5.4"]
-                 [buddy "1.0.0"]
-                 [cljs-ajax "0.5.8"]
-                 [clj-time "0.12.2"]
-                 [com.novemberain/monger "3.0.0-rc2"]
-                 [compojure "1.5.1"]
-                 [com.draines/postal "2.0.2"]
-                 [cprop "0.1.9"]
-                 [environ "1.1.0"]
+  :dependencies [[baking-soda "0.2.0" :exclusions [cljsjs/react-bootstrap]]
+                 [buddy "2.0.0"]
+                 [ch.qos.logback/logback-classic "1.2.3"]
+                 [clj-time "0.14.4"]
+                 [cljs-ajax "0.7.4"]
+                 [cljsjs/react-popper "0.10.4-0"]
+                 [cljsjs/react-transition-group "2.3.1-0"]
+                 [com.cognitect/transit-java "0.8.337"]
+                 [com.google.guava/guava "20.0"]
+                 [com.novemberain/monger "3.1.0" :exclusions [com.google.guava/guava]]
+                 [compojure "1.6.1"]
+                 [cprop "0.1.11"]
+                 [funcool/struct "1.3.0"]
                  [luminus-aleph "0.1.5"]
-                 [luminus-nrepl "0.1.4"]
-                 [luminus/ring-ttl-session "0.3.1"]
-                 [markdown-clj "0.9.91"]
-                 [metosin/compojure-api "1.1.9"]
-                 [metosin/ring-http-response "0.8.0"]
-                 [mount "0.1.10"]
-                 [org.clojure/clojure "1.8.0"]
-                 [org.clojure/clojurescript "1.9.293" :scope "provided"]
-                 [org.clojure/tools.cli "0.3.5"]
-                 [org.clojure/tools.logging "0.3.1"]
-                 [org.webjars.bower/tether "1.3.7"]
-                 [org.webjars/bootstrap "4.0.0-alpha.5"]
-                 [org.webjars/font-awesome "4.7.0"]
-                 [re-frame "0.9.0"]
-                 [reagent "0.6.0"]
-                 [reagent-utils "0.2.0"]
-                 [ring-middleware-format "0.7.0"]
-                 [ring-webjars "0.1.1"]
-                 [ring/ring-defaults "0.2.1"]
+                 [luminus/ring-ttl-session "0.3.2"]
+                 [markdown-clj "1.0.2"]
+                 [metosin/compojure-api "1.1.12"]
+                 [metosin/muuntaja "0.5.0"]
+                 [metosin/ring-http-response "0.9.0"]
+                 [mount "0.1.13"]
+                 [nrepl "0.4.4"]
+                 [org.clojure/clojure "1.9.0"]
+                 [org.clojure/clojurescript "1.10.339" :scope "provided"]
+                 [org.clojure/tools.cli "0.3.7"]
+                 [org.clojure/tools.logging "0.4.1"]
+                 [org.webjars.bower/tether "1.4.4"]
+                 [org.webjars/bootstrap "4.1.3"]
+                 [org.webjars/font-awesome "5.2.0"]
+                 [org.webjars/webjars-locator "0.34"]
+                 [re-frame "0.10.5"]
+                 [reagent "0.8.1"]
+                 [ring-webjars "0.2.0"]
+                 [ring/ring-core "1.6.3"]
+                 [ring/ring-defaults "0.3.2"]
                  [secretary "1.2.3"]
-                 [selmer "1.10.2"]
-                 [com.taoensso/timbre "4.8.0"]]
+
+                 [bouncer "1.0.0"]
+                 [selmer "1.12.0"]
+                 [environ "1.1.0"]
+                 [com.taoensso/timbre "4.10.0"]
+                 [com.draines/postal "2.0.2"]]
 
   :min-lein-version "2.0.0"
-
-  :jvm-opts ["-server" "-Dconf=.lein-env"]
-  :source-paths ["src/clj" "src/cljc"]
+  
+  :source-paths ["src/clj" "src/cljs" "src/cljc"]
+  :test-paths ["test/clj"]
   :resource-paths ["resources" "target/cljsbuild"]
   :target-path "target/%s/"
-  :main reschedul2.core
+  :main ^:skip-aot sand-compass.core
 
-  :plugins [[lein-cprop "1.0.1"]
-            [lein-cljsbuild "1.1.4"]
-            [lein-less "1.7.5"]
-            [deraen/lein-less4j "0.6.0"]
-            [lein-auto "0.1.2"]
+  :plugins [[lein-cljsbuild "1.1.7"]
             [lein-environ "1.1.0"]]
-
-  :less {
-          :source-paths ["resources/less"]
-          :target-path "resources/public/css"}
 
   :clean-targets ^{:protect false}
   [:target-path [:cljsbuild :builds :app :compiler :output-dir] [:cljsbuild :builds :app :compiler :output-to]]
@@ -63,8 +62,9 @@
   {:http-server-root "public"
    :nrepl-port 7002
    :css-dirs ["resources/public/css"]
-   :nrepl-middleware [cemerick.piggieback/wrap-cljs-repl]}
-
+   :nrepl-middleware
+   [cider/wrap-cljs-repl cider.piggieback/wrap-cljs-repl]}
+  
 
   :profiles
   {:uberjar {:omit-source true
@@ -74,72 +74,74 @@
               {:min
                {:source-paths ["src/cljc" "src/cljs" "env/prod/cljs"]
                 :compiler
-                {:output-to "target/cljsbuild/public/js/reschedul2.js"
-                 :externs ["react/externs/react.js"]
+                {:output-dir "target/cljsbuild/public/js"
+                 :output-to "target/cljsbuild/public/js/app.js"
+                 :source-map "target/cljsbuild/public/js/app.js.map"
                  :optimizations :advanced
                  :pretty-print false
                  :closure-warnings
-                 {:externs-validation :off :non-standard-jsdoc :off}}}}}
-
-
+                 {:externs-validation :off :non-standard-jsdoc :off}
+                 :externs ["react/externs/react.js"]}}}}
+             
+             
              :aot :all
-             :uberjar-name "reschedul2.jar"
+             :uberjar-name "sand-compass.jar"
              :source-paths ["env/prod/clj"]
              :resource-paths ["env/prod/resources"]}
-   ;; Set these in ./profiles.clj
-   :test-env-vars {}
-   :dev-env-vars  {}
 
    :dev           [:project/dev :profiles/dev]
    :test          [:project/dev :project/test :profiles/test]
 
-   :project/dev  {:dependencies [[prone "1.1.4"]
-                                 [ring/ring-mock "0.3.0"]
-                                 [ring/ring-devel "1.5.0"]
-                                 [pjstadig/humane-test-output "0.8.1"]
-                                 [binaryage/devtools "0.8.3"]
-                                 [com.cemerick/piggieback "0.2.2-SNAPSHOT"]
-                                 [doo "0.1.7"]
-                                 [figwheel-sidecar "0.5.8"]
-                                 [proto-repl "0.3.1"]]
-
-                  :plugins      [[com.jakemccrary/lein-test-refresh "0.14.0"]
-                                 [lein-doo "0.1.7"]
-                                 [lein-figwheel "0.5.8"]
-                                 [org.clojure/clojurescript "1.9.293"]]
-                  :hooks [leiningen.less]
+   :project/dev  {:jvm-opts ["-Dconf=dev-config.edn" "--add-modules" "java.xml.bind"]
+                  :dependencies [[binaryage/devtools "0.9.10"]
+                                 [cider/piggieback "0.3.8"]
+                                 [day8.re-frame/re-frame-10x "0.3.3-react16"]
+                                 [doo "0.1.10"]
+                                 [expound "0.7.1"]
+                                 [figwheel-sidecar "0.5.16"]
+                                 [pjstadig/humane-test-output "0.8.3"]
+                                 [prone "1.6.0"]
+                                 [ring/ring-devel "1.6.3"]
+                                 [ring/ring-mock "0.3.2"]]
+                  :plugins      [[com.jakemccrary/lein-test-refresh "0.23.0"]
+                                 [lein-doo "0.1.10"]
+                                 [lein-figwheel "0.5.16"]]
                   :cljsbuild
                   {:builds
                    {:app
                     {:source-paths ["src/cljs" "src/cljc" "env/dev/cljs"]
+                     :figwheel {:on-jsload "sand-compass.core/mount-components"}
                      :compiler
-                     {:main "reschedul2.app"
+                     {:main "sand-compass.app"
                       :asset-path "/js/out"
-                      :output-to "target/cljsbuild/public/js/reschedul2.js"
+                      :output-to "target/cljsbuild/public/js/app.js"
                       :output-dir "target/cljsbuild/public/js/out"
                       :source-map true
                       :optimizations :none
-                      :pretty-print true}}}}
-
-
-
+                      :pretty-print true
+                      :closure-defines {"re_frame.trace.trace_enabled_QMARK_" true}
+                      :preloads [day8.re-frame-10x.preload]}}}}
+                  
+                  
+                  
                   :doo {:build "test"}
-                  :source-paths ["env/dev/clj" "test/clj"]
+                  :source-paths ["env/dev/clj"]
                   :resource-paths ["env/dev/resources"]
                   :repl-options {:init-ns user}
                   :injections [(require 'pjstadig.humane-test-output)
                                (pjstadig.humane-test-output/activate!)]}
-   :project/test {:resource-paths ["env/test/resources"]
+   :project/test {:jvm-opts ["-Dconf=test-config.edn" "--add-modules" "java.xml.bind"]
+                  :resource-paths ["env/test/resources"]
                   :cljsbuild
                   {:builds
                    {:test
                     {:source-paths ["src/cljc" "src/cljs" "test/cljs"]
                      :compiler
                      {:output-to "target/test.js"
-                      :main "reschedul2.doo-runner"
+                      :main "sand-compass.doo-runner"
                       :optimizations :whitespace
-                      :pretty-print true}}}}}
-
-
+                      :pretty-print true}}}}
+                  
+                  }
    :profiles/dev {}
-   :profiles/test [:test-env-vars]})
+   :profiles/test {}})
